2006-09-11  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkentry.c (gtk_entry_set_property): Remove senseless hack
	which made non-editable GtkEntry insensitive.

2006-09-08  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeprivate.h (struct GtkTreePrivate): remove unused
	fields; add new field.

	* gtk/gtktreeview.c (gtk_tree_view_init), (gtk_tree_view_button_press),
	(gtk_tree_view_button_release), (gtk_tree_view_set_model),
	(gtk_tree_view_grab_notify): save selectable state of the first
	drag row,
	(gtk_tree_view_button_press): only unselect the other rows and
	set the cursor if the current row is selectable,
	(gtk_tree_view_motion_bin_window): only allow pen dragging if
	the first drag row is selectable.

	NB#39901

2006-09-08  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_grab_notify): clear current
	selection if the node where the pen drag started was previously
	unselected; don't clear selection otherwise.
	NB#37624
	
2006-09-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtktreeview.c (gtk_tree_view_scroll_to_cell): Align view with
	row/column background area, which includes margins and such unlike
	cell area. (#354780)  NB#37442

2006-09-07  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_grab_notify): don't clear and
	select when setting cursor.  NB#39784

2006-09-07  Kristian Rietveld  <kris@imendio.com>

	* gtk/gtktreeview.c (gtk_tree_view_button_press): rework the code
	responsible for starting DnD/pen drag; only move focus if the
	destination is selectable; if the button down path is not yet
	selectable we can already clear the selection here in some cases.
	(gtk_tree_view_motion_bin_window): only look into unselecting the
	current selection if there's a queued select row.
	NB#37868, NB#37624.

2006-09-07  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* gtk/gtkcalendar.c: Add #include <locale.h> to fix the build with
	optimizations disabled.
